<resources>
    <string name="app_name">ACCU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Utilities</string>
    <string name="nav_header_subtitle">Users name and apartment number</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="app_home_all_users">Home</string>
    <string name="app_bar_about_all_users">About</string>
    <string name="app_menu_history_user">History</string>
    <string name="app_menu_archive_admin">Archive</string>
    <string name="app_menu_resources_report_user">Resources report</string>
    <string name="app_menu_resource_reports_admin">Resource reports</string>
    <string name="app_menu_settings_user">Settings</string>
    <string name="app_menu_predict_user">Predict</string>
    <string name="app_menu_resource_user">Resources</string>
    <string name="app_bar_settings_user">User settings</string>
    <string name="app_bar_accounts_management_admin">Accounts management</string>
    <string name="authors_name">Moldovan Alexandru-Vasile</string>
    <string name="title_activity_admin">ActivityAdmin</string>
    <string name="action_settings">Settings</string>
    <string name="cubicMetter">m³</string>
    <string name="address">Address:</string>
    <string name="apartment_number">Apartment number:</string>
    <string name="nav_home_user">Home</string>
    <string name="app_home_price_tag_user">Price tags</string>
    <string name="action_info_user">Information</string>
    <string name="electricity">Electricity meter:</string>
    <string name="water">Water meter:</string>
    <string name="gas">Gas meter:</string>
    <string name="omni_speech">\t\t\t\tOh, hello !\n\t\t\t\tIt looks like you need more information about what is going on here.\n\t\t\t\tWell, lets start. My name is Omni, cool name, right? Hehe, I knew it ! I am a robot programmed to predict your usage for the next date of water, gas and electricity based on how the weather will be in next date and the resources used by you in the past. If you do not have any past reports, I will predict the usage of the resources depending on the weather. \n\t\t\t\tHmmm...I think that is all. Thank you for dropping by. Have a nice day !</string>
    <string name="kw">kW</string>
    <string name="prediction_of_resurces_future">\t\t\t\tPrediction of resources that will be used next date:</string>
    <string name="app_menu_log_off">Log out</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="pass_admin_role">Pass admin role</string>
    <string name="new_name">New name</string>
    <string name="edit_name">Edit name:</string>
    <string name="delete_account">Delete an account</string>
    <string name="username">Username</string>
    <string name="create_account">Create account</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="waiting">Waiting...</string>
    <string name="do_you_have_a_private_contract_with_a_electricity_provider">Do you have a private contract with a electricity provider?</string>
    <string name="do_you_have_a_private_contract_with_a_water_provider">Do you have a private contract with a water provider?</string>
    <string name="do_you_have_a_private_contract_with_a_gas_provider">Do you have a private contract with a gas provider?</string>
    <string name="garage_usage">Garage usage:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_at_home">Are you at home?</string>
    <string name="save">Save</string>
    <string name="please_select_the_address">Please select your home address:</string>
    <string name="delete_account_text">Are you sure you want to delete the account?</string>
    <string name="google">Google</string>
    <string name="or_you_can_use">Or you can sign up</string>
    <string name="invalid_code">Invalid association code !</string>
    <string name="e_mail_address">E-Mail address:</string>
    <string name="here">HERE</string>
    <string name="cancel_sign_up">Are you sure you want to cancel your sign up?</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="passwords_no_match">Passwords do not match !</string>
    <string name="password_changed">The password was changed with success !</string>
    <string name="complete_all_fields">Please complete all the fields !</string>
    <string name="charged_for_cleaning">You will be charged for the cleaning of the apartment building each date.</string>
    <string name="charged_for_reparations">You will be charged if the apartment building needs any reparations.</string>
    <string name="charged_for_park_spot">You will be charged for keeping the garage clean if you are using a parking spot in it.</string>
    <string name="persons_lived_in_apartament">Please choose the number of people that lived in the house more than 20 days a date.</string>
    <string name="delete_account_settings">Delete account</string>
    <string name="profile_settings">Profile settings</string>
    <string name="apartment_number_text">Apartment number</string>
    <string name="saveChanges">Save changes</string>
    <string name="charges">Charges</string>
    <string name="garage_fee">Garage fee:</string>
    <string name="fee">Fee</string>
    <string name="reparations_fee">Reparations fee:</string>
    <string name="cleaning_fee">Cleaning fee:</string>
    <string name="ZERO_RON">0 RON</string>
    <string name="administrator">Administrator:</string>

</resources>
