<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:drawableStart="@drawable/ic_action_back_black"
        android:focusable="true"
        android:onClick="backToSettingsUser"
        android:text="Back"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/newNameCard"
        android:layout_width="333dp"
        android:layout_height="215dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_marginTop="12dp"
                android:text="@string/edit_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editNameSettingsUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/new_name"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

            <android.support.v7.widget.CardView
                android:layout_width="255dp"
                android:layout_height="41dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                android:onClick="saveUserName"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/changePassCard"
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goToChangePassFragment"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/deleteUserCard"
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/delete_account_settings"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>