<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray">

    <TextView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_action_back_black"
        android:focusable="true"
        android:onClick="goToSettingsAdmin"
        android:text="Back"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:layout_width="333dp"
        android:layout_height="344dp"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/oldPasswordTextInputAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:drawableStart="@drawable/ic_action_pass_black"
                android:ems="10"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/newPasswordTextInputAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/oldPasswordTextInputAdmin"
                android:layout_centerHorizontal="true"
                android:drawableStart="@drawable/ic_action_pass_black"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/confirmPasswordTextInputAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="116dp"
                android:drawableStart="@drawable/ic_action_pass_black"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black" />

            <android.support.v7.widget.CardView
                android:id="@+id/changePassBtn"
                android:layout_width="255dp"
                android:layout_height="41dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="24dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="checkPasswordsAdmin"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/change_password"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>