<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray">

    <android.support.v7.widget.CardView
        android:id="@+id/saveBtn"
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="saveUserName"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/garageCard"
        android:layout_width="333dp"
        android:layout_height="122dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_marginTop="12dp"
                android:text="@string/garage_fee"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/garageFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/fee"
                android:inputType="number"
                android:textColor="@color/black" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/reparationsCard"
        android:layout_width="333dp"
        android:layout_height="122dp"
        android:layout_below="@+id/garageCard"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_marginTop="12dp"
                android:text="@string/reparations_fee"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/reparationsFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/fee"
                android:inputType="number"
                android:textColor="@color/black" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cleaningCard"
        android:layout_width="333dp"
        android:layout_height="122dp"
        android:layout_below="@+id/reparationsCard"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_marginTop="12dp"
                android:text="@string/cleaning_fee"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cleaningFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/fee"
                android:inputType="number"
                android:textColor="@color/black" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/monthCard"
        android:layout_width="333dp"
        android:layout_height="69dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="86dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/monthSpinner"
                android:layout_marginStart="22dp"
                android:text="Month:"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/monthSpinner"
                android:layout_width="108dp"
                android:layout_height="24dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="11dp"
                android:layout_marginEnd="43dp"
                android:background="@color/gray"
                android:popupBackground="@color/gray"
                android:spinnerMode="dialog" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>